# tet_cppsdk

./: .gitignore  CMakeLists.txt  README.md
examples/: example_eye_reader.cpp
include/: gazeapi.h
src/: gazeapi.cpp  gazeapi_socket.cpp  gazeapi_socket.hpp
